# receiving-data

./: CMakeLists.txt  README.md
include/: callback.h  receiver.h
src/: callback.cpp  receiver.cpp
test/: CMakeLists.txt  gtest.cpp
